--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ src/org/labkey/fcsexpress/FCSExpressController.java -text
 src/org/labkey/fcsexpress/FCSExpressDataLoader.java -text
 src/org/labkey/fcsexpress/FCSExpressManager.java -text
 src/org/labkey/fcsexpress/FCSExpressModule.java -text
+src/org/labkey/fcsexpress/FCSExpressProtocolSchema.java -text
