Issue 16464: improve silly import message on FCSExpress assay Issue 16169: Assay importRun JavaScript API
SVN r23345 |2012-11-28 21:54:06 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ src/org/labkey/fcsexpress/FCSExpressDataLoader.java -text
 src/org/labkey/fcsexpress/FCSExpressManager.java -text
 src/org/labkey/fcsexpress/FCSExpressModule.java -text
 src/org/labkey/fcsexpress/FCSExpressProtocolSchema.java -text
+src/org/labkey/fcsexpress/importMessage.jsp -text
